<resources>
    <string name="app_name">MediaFacade</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_drawer_group_audio">Audio</string>
    <string name="navigation_drawer_group_image">Images</string>
    <string name="navigation_drawer_group_video">Videos</string>
    <string name="navigation_drawer_group_about">About</string>
    <string name="navigation_drawer_item_audio_all">All Musics</string>
    <string name="navigation_drawer_item_audio_playlist">Playlist</string>
    <string name="navigation_drawer_item_audio_artist">Artists</string>
    <string name="navigation_drawer_item_audio_genres">Genres</string>
    <string name="navigation_drawer_item_audio_albums">Albums</string>
    <string name="navigation_drawer_item_image_buckets">Image Buckets</string>
    <string name="navigation_drawer_item_image_all">All Images</string>
    <string name="navigation_drawer_item_video_buckets">Video Buckets</string>
    <string name="navigation_drawer_item_video_all">All Videos</string>
    <string name="navigation_drawer_item_about">About this app</string>

    <string name="empty_view_loading">Loading…</string>
    <string name="empty_view_no_content">No items.</string>

    <string name="permission_dialog_allow">Allow</string>
    <string name="permission_dialog_deny">Deny</string>
    <string name="permission_dialog_access_external_storage_title">Read external storage</string>
    <string name="permission_dialog_access_external_storage_denied">Cannot read music files information until you grant it again.</string>
    <string name="permission_dialog_access_external_storage_never_ask">I never ask the permission again.</string>

    <string name="about_app_description">Produced by Drivemode, Inc.\nMany thanks to these open source projects:</string>
    <string name="about_app_license_permissions_dispatcher">PermissionsDispatcher by hotchemi</string>
    <string name="about_app_license_retrolambda">Retrolambda by Esko Luontola</string>
    <string name="about_app_license_rx">RxJava and RxAndroid by ReactiveExtension</string>
    <string name="about_app_license_picasso">Picasso by Square, Inc.</string>
    <string name="about_app_license_aosp">Android Open Source Project</string>
</resources>
