<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@drawable/side_nav_bar"
                android:theme="@style/ThemeOverlay.AppCompat.Dark">
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/nav_header_vertical_spacing"/>
                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@mipmap/ic_launcher"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/nav_header_vertical_spacing"/>
                <TextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_app_description"/>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/nav_header_vertical_spacing"/>
            </LinearLayout>
            <TextView
                android:id="@+id/license_permissions_dispatcher"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeight"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/about_app_license_permissions_dispatcher"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/license_retrolambda"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeight"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/about_app_license_retrolambda"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/license_rx"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeight"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/about_app_license_rx"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/license_aosp"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeight"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/about_app_license_aosp"
                android:gravity="center_vertical"/>
        </LinearLayout>
    </ScrollView>
</layout>
